@@ -1622,7 +1622,7 @@ view_response_cb (GtkWidget *widget, ItipViewResponse response, gpointer data)
 	gboolean status = FALSE, delete_invitation_from_cache = FALSE;
 	icalproperty *prop;
 	ECalComponentTransparency trans;
-	gboolean flag;
+	gboolean flag, save_schedules;
 
 	if (pitip->method == ICAL_METHOD_PUBLISH || pitip->method ==  ICAL_METHOD_REQUEST) {
 		if (itip_view_get_free_time_check_state (ITIP_VIEW (pitip->view)))
@@ -1647,6 +1647,8 @@ view_response_cb (GtkWidget *widget, ItipViewResponse response, gpointer data)
 		icalcomponent_add_property (pitip->ical_comp, prop);
 	}
 
+	save_schedules = e_cal_get_save_schedules (pitip->current_ecal);
+
 	switch (response) {
 		case ITIP_VIEW_RESPONSE_ACCEPT:
 			if (pitip->type != E_CAL_SOURCE_TYPE_JOURNAL)
@@ -1657,7 +1659,7 @@ view_response_cb (GtkWidget *widget, ItipViewResponse response, gpointer data)
 			if (status) {
 				e_cal_component_rescan (pitip->comp);
 				flag = update_item (pitip, response);
-				if (e_cal_get_save_schedules (pitip->current_ecal) && flag)
+				if (save_schedules && flag)
 					delete_invitation_from_cache = TRUE;
 			}
 			break;
@@ -1667,7 +1669,7 @@ view_response_cb (GtkWidget *widget, ItipViewResponse response, gpointer data)
 			if (status) {
 				e_cal_component_rescan (pitip->comp);
 				flag = update_item (pitip, response);
-				if (e_cal_get_save_schedules (pitip->current_ecal) && flag)
+				if (save_schedules && flag)
 					delete_invitation_from_cache = TRUE;
 
 			}
@@ -1686,7 +1688,7 @@ view_response_cb (GtkWidget *widget, ItipViewResponse response, gpointer data)
 			if (status) {
 				e_cal_component_rescan (pitip->comp);
 				flag = update_item (pitip, response);
-				if (e_cal_get_save_schedules (pitip->current_ecal) && flag)
+				if (save_schedules && flag)
 					delete_invitation_from_cache = TRUE;
 			}
 			break;
@@ -1746,7 +1748,7 @@ view_response_cb (GtkWidget *widget, ItipViewResponse response, gpointer data)
 		}
 	}
 
-	if (!delete_invitation_from_cache && pitip->delete_message) {
+	if (!save_schedules && pitip->delete_message) {
 		g_message ("Deleting!");
 		camel_folder_delete_message (pitip->folder, pitip->uid);
 	}
